Fixed pre and code to be responsive
Worked out that the pre and code tags are not responsive at all when
resizing the browser window.  Found a great solution for this with
various testing and combining rules.  More here -
http://css-tricks.com/snippets/css/make-pre-text-wrap/

--- a/css/css3fun.css
+++ b/css/css3fun.css
@@ -67,3 +67,11 @@ a:hover {
 	box-shadow: 2px 2px 1px #5B3D45;
 	color: #FFF;
 }
+pre {
+	word-break: keep-all;  
+	word-wrap: break-word;
+	white-space: pre;
+	white-space: -moz-pre-wrap;
+	white-space: pre-wrap;
+	white-space: pre\9; 
+}
